--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,21 +29,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ojdbc14.jar-1=ojdbc14.jar
-file.reference.ojdbc6.jar=C:\\Users\\USER\\Documents\\NetBeansProjects\\PCSupport\\ojdbc6.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.ojdbc14.jar-1}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc14.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -77,7 +75,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
